Done the POC and updated the README file